Add automated refactoring tool OpenRewrite Update Java 11 deprecated code using OpenRewrite