@@ -19,7 +19,6 @@ package com.mucommander.commons.file.protocol.local;
 import java.io.IOException;
 import java.nio.file.FileSystems;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardWatchEventKinds;
 import java.nio.file.WatchEvent;
 import java.nio.file.WatchKey;
@@ -56,7 +55,7 @@ public class LocalMonitoredFile extends ModificationDateBasedMonitoredFile {
 
     @Override
     public void startWatch() {
-        Path path = Paths.get(getAbsolutePath());
+        Path path = Path.of(getAbsolutePath());
         LOGGER.debug("start watching {}", this);
         if (isDirectory()) {
             try {
